--- a/tutorial.html
+++ b/tutorial.html
@@ -58,11 +58,11 @@
       color: #4a8;
     }
     .step h2::before {
-      content: '🧪';
+      content: '🪴';
       position: absolute;
       left: 0;
-      top: 0;
-      font-size: 18px;
+      top: 0; 
+      font-size: 20px;
       animation: blink 1s steps(1) infinite;
     }
     p, ul, ol {
@@ -105,9 +105,22 @@
 </head>
 <body>
   <div class="container">
-    <h1>🛡️ Cell Defense 튜토리얼</h1>
+    <h1>🛡️ Cell Defense 튜토리얼
+      made by UNREVR
+    </h1>
 
     <div class="step">
+      
+      <h2>0. 개발자 소개</h2>
+      <p>경기북과학고 최고의 동아리 UNREVR 부원</p>
+      <ul>
+        <li>김대원 : 백엔드 및 프론트엔드 담당</li>
+        <li>김태윤 : 프론트엔드 및 디자인 담당</li>
+      </ul>
+    </div>
+
+    <div class="step">
+
       <h2>1. 게임 소개</h2>
       <p>Cell Defense는 픽셀 그래픽의 실험실 테마를 접목한 웨이브 디펜스 게임입니다.</p>
       <ul>
@@ -159,7 +172,7 @@
 
     <div class="step">
       <h2>6. 게임 종료</h2>
-      <p>Health가 0이 되면 결과 페이지(<code style="color:#ff6; font-family:'Press Start 2P'">result.html?score=점수</code>)로 이동합니다.</p>
+      <p>Health가 0이 되면 결과 페이지로 이동합니다.</p>
     </div>
 
     <button id="startGame">게임 시작</button>
