--- a/tutorial.html
+++ b/tutorial.html
@@ -10,7 +10,6 @@
       margin: 0;
       padding: 0;
       background-color: #2a2a2a;
-      /* Minecraft-like block grid for lab floor */
       background-image:
         linear-gradient(rgba(58,58,58,0.8) 2px, transparent 2px),
         linear-gradient(90deg, rgba(58,58,58,0.8) 2px, transparent 2px);
@@ -36,6 +35,16 @@
       box-sizing: border-box;
       max-height: 90vh;
       overflow-y: auto;
+    }
+    .logo {
+      text-align: center;
+      margin-bottom: 16px;
+    }
+    .logo img {
+      image-rendering: pixelated;
+      width: 80px;
+      height: 80px;
+      border: 4px solid #4a8;
     }
     h1 {
       margin: 0 0 20px;
@@ -105,12 +114,14 @@
 </head>
 <body>
   <div class="container">
-    <h1>🛡️ Cell Defense 튜토리얼
-      made by UNREVR
-    </h1>
+    <!-- 추가: 동아리 로고 -->
+    <div class="logo">
+      <img src="images/Unrevr.png" alt="UNREVR 로고">
+    </div>
+
+    <h1>🛡️ Cell Defense 튜토리얼<br>made by UNREVR</h1>
 
     <div class="step">
-      
       <h2>0. 개발자 소개</h2>
       <p>경기북과학고 최고의 동아리 UNREVR 부원</p>
       <ul>
@@ -119,8 +130,8 @@
       </ul>
     </div>
 
+    <!-- 이하 내용 동일 -->
     <div class="step">
-
       <h2>1. 게임 소개</h2>
       <p>Cell Defense는 픽셀 그래픽의 실험실 테마를 접목한 웨이브 디펜스 게임입니다.</p>
       <ul>
